# mediaPlayer

./: .gitignore  CMakeLists.txt  README.md  RotatingLabel.h  main.cpp  mediaPlayer.ui  ui_mediaPlayer.h
include/: RotatingLabel.h  metadata_parser.h  music_metadata.h  music_player_window.h  taglib_utils.h  ui_mediaPlayer.h
include/controller/: controller.h
include/player_logic/: media_playback.h  metadata_parser.h  music_metadata.h  playlist_loader.h
include/ui/: RotatingLabel.h  disc_rotator.h  music_player_window.h  player_ui.h  ui_mediaPlayer.h
source/: test.qrc
src/: metadata_parser.cpp  metadata_test.cpp  music_player_window.cpp
src/controller/: controller.cpp
src/player_logic/: media_playback.cpp  metadata_parser.cpp  playlist_loader.cpp
src/ui/: disk_rotator.cpp  music_player_window.cpp  player_ui.cpp
